Fix: scores value update

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <div class="container">
       <div class="scores">
-        <p>Computer : <span>0</span></p>
-        <p>Du : <span>0</span></p></div>
+        <p>Computer : <span id="computer_score">0</span></p>
+        <p>Du : <span  id="user_score">0</span></p></div>
    
       <div class="weapons">
         <button onclick="checker('Stein')">
